2019-02-28  Kirit Saelensminde  <kirit@felspar.com>
 Implement string conversion (ISO Zulu time) for `std::chrono::system_clock`

2019-02-24  Kirit Saelensminde  <kirit@felspar.com>
 Add new nonce functions that return base64url formatted random data in ordered and un-ordered variants.

2019-01-08  Kirit Saelensminde  <kirit@felspar.com>
 Force conversion of the underlying string type from a tagged string to `std::string` be explicitly invoked.

2018-12-21  Kirit Saelensminde  <kirit@felspar.com>
 Further changes needed for new f5-cord string implementation.

2018-12-18  Kirit Saelensminde  <kirit@felspar.com>
 Split the CMake configuraion into smaller parts.

2018-12-18  Kirit Saelensminde  <kirit@felspar.com>
 Changes to string handling to support wider adoption of `f5::u8string`

2018-12-01  Kirit Saelensminde  <kirit@felspar.com>
 Support EdDSA JWTs.

2018-11-08  Kirit Saelensminde  <kirit@felspar.com>
 JWT secrets can now be looked up via a function passed to the load function.

2018-10-28  Kirit Saelensminde  <kirit@felspar.com>
 Add iterator traits to JSON iterator.

2018-10-07  Kirit Saelensminde  <kirit@felspar.com>
 Tidy up some headers.

2018-10-02  Kirit Saelensminde  <kirit@felspar.com>
 Do less work when stringifying JSON.

2018-09-28  Kirit Saelensminde  <kirit@felspar.com>
 Refactor the integral to integral coercions to remove a lot of complex template meta-programming.

2018-08-31  Kirit Saelensminde  <kirit@felspar.com>
 Add a way to get a JSON pointer URL fragment string for a `jcursor`.

2018-08-16  Kirit Saelensminde  <kirit@felspar.com>
 Add a parser for JSON pointers.

2018-08-15  Kirit Saelensminde  <kirit@felspar.com>
 `fostlib::json::apply_visitor` can now take any number of lambda like expressions.

2018-08-11  Kirit Saelensminde  <kirit@felspar.com>
 An empty `jcursor` needs to be represented as an empty array in JSON.

2018-08-10  Kirit Saelensminde  <kirit@felspar.com>