@@ -113,7 +113,7 @@ fostlib::digester &fostlib::digester::
         operator<<(const fostlib::fs::path &filename) {
     fostlib::digester::impl::check(m_implementation.get());
     fostlib::progress progress(filename);
-    fostlib::fs::ifstream file(filename, std::ios::binary);
+    fostlib::ifstream file(filename, std::ios::binary);
     while (!file.eof() && file.good()) {
         boost::array<char, 4096> buffer;
         file.read(buffer.c_array(), buffer.size());
