@@ -1,3 +1,6 @@
+2019-04-02  Kirit Saelensminde  <kirit@felspar.com>
+ Use of define `FSL_FORCE_STD_FILESYSTEM` switches from `boost::filesystem` to `std::filesystem` with names in `fostlib::fs`.
+
 2019-02-28  Kirit Saelensminde  <kirit@felspar.com>
  Implement string conversion (ISO Zulu time) for `std::chrono::system_clock`
 
